--- a/todo.css
+++ b/todo.css
@@ -1,4 +1,4 @@
-body
+body, html
 {
 	margin: 0;
 	width: 250px;
@@ -14,6 +14,7 @@ table
 	margin: 0;
 	#font-family: verdana;
 	font: 9px "Trebuchet MS", sans-serif;
+	width: 240px;
 }
 
 #gadgetContent
@@ -36,6 +37,15 @@ table
 	margin: 2px;
 }
 
+.itemListSingleItem
+{
+	margin-top: 2px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #a0a0a0; 
+	width: 240px;
+}
+
 .sectionTitle
 {
 	padding-top: 10px;
@@ -49,4 +59,12 @@ table
 .selectedRow
 {
 	background-color: yellow;
+}
+
+.acc-menu-hdr
+{
+	background-color : #c0c0c0;
+	font: 11px;
+	font-weight: bold; 
+	margin-top: 10px;
 }
