--- a/todo.css
+++ b/todo.css
@@ -9,6 +9,12 @@ body, html
 	font: 9px "Trebuchet MS", sans-serif;
 }
 
+#wrap
+{
+	overflow-y:scroll;
+	overflow-x:hidden;	
+}
+
 table
 {
 	margin: 0;
