--- a/todo.css
+++ b/todo.css
@@ -48,7 +48,7 @@ table
 	margin-top: 2px;
 	border-style: solid;
 	border-width: 1px;
-	border-color: #a0a0a0; 
+	border-color: #a0a0a0;
 	width: 240px;
 }
 
@@ -73,4 +73,9 @@ table
 	font: 11px;
 	font-weight: bold; 
 	margin-top: 10px;
+}
+
+.selectedItem
+{
+	background-color: yellow;
 }
